chapter-09/cluster-apk8s-dev5/003-data/120-openfaas/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: faas
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: faas.data.dev5.apk8s.dev
      http:
        paths:
          - backend:
              serviceName: gateway
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - faas.data.dev5.apk8s.dev
      secretName: faas-data-production-tls
